testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/case9.expect.out
error: unknown start of token: \u{000B}
  ==> case9.cj:14:2:
   | 
14 |     \u{000B}
   |     ^^^^^^^^ unknown start of token: \u{000B}
   | 

1 error generated, 1 error printed.
